# mini-it-cyber-projects

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml
docs/: INTERVIEW-WALKTHROUGH.md  ROADMAP.md
java/rbac-simulator/: README.md  pom.xml
java/rbac-simulator/src/main/java/com/mgh/rbac/: AccessRegistry.java  App.java
java/rbac-simulator/src/test/java/com/mgh/rbac/: AccessRegistryTest.java
python/dependency_pin_checker/: README.md  pyproject.toml
python/dependency_pin_checker/samples/: requirements-bad.txt
python/dependency_pin_checker/src/dependency_pin_checker/: __init__.py  __main__.py  checker.py  cli.py
python/dependency_pin_checker/tests/: test_checker.py
python/evidence_manifest_builder/: README.md  pyproject.toml
python/evidence_manifest_builder/samples/evidence_pack/: notes.txt
python/evidence_manifest_builder/src/evidence_manifest_builder/: __init__.py  __main__.py  cli.py  manifest.py
python/evidence_manifest_builder/tests/: test_manifest.py
python/file_hash_verifier/: README.md  pyproject.toml
python/file_hash_verifier/src/file_hash_verifier/: __init__.py  __main__.py  cli.py  hasher.py
python/file_hash_verifier/tests/: test_hasher.py
python/ioc_text_extractor/: README.md  pyproject.toml
python/ioc_text_extractor/samples/: sample_alert.txt
python/ioc_text_extractor/src/ioc_text_extractor/: __init__.py  __main__.py  cli.py  extract.py
python/ioc_text_extractor/tests/: test_extract.py
python/log_summary/: README.md  pyproject.toml
python/log_summary/src/log_summary/: __init__.py  __main__.py  cli.py  summarizer.py
python/log_summary/tests/: test_summarizer.py
python/windows_event_triage_helper/: README.md  pyproject.toml
python/windows_event_triage_helper/samples/: lab_events.csv  lab_events.json  sample_counts.csv  sample_report.md
python/windows_event_triage_helper/src/windows_event_triage_helper/: __init__.py  __main__.py  catalog.py  cli.py  triage.py
python/windows_event_triage_helper/tests/: test_triage.py
